# easyTuples

./: LICENSE  README.md  easyTuples.cabal
Data/Tuple/PolyParts/: List.hs  Modification.hs  OneTuple.hs  Select.hs  Size.hs  Update.hs
